--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.3.0",
     "@types/node": "^18.6.0",
     "@types/react": "^18.0.15",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3",
+    "miragejs": "^0.1.45",
     "typescript": "^4.7.4"
   }
 }
