--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.32.0",
     "react-icons": "^4.4.0",
+    "react-query": "^4.0.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.3.0",
     "@types/node": "^18.6.0",
     "@types/react": "^18.0.15",
+    "@types/react-query": "^1.2.9",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3",
     "miragejs": "^0.1.45",
